mType/tests/testFiles/import/pass/inherit3/Super.mt
public class Super {
    public function tag(): string {
        return "S";
    }
}
