mType/tests/testFiles/import/error/modules/OverwriteModule.mt
class LocalClass {
    fun getSource(): String {
        return "From module";
    }
}
